--- a/app/views/templates/_tab_content_issue_code_artifacts.html.erb
+++ b/app/views/templates/_tab_content_issue_code_artifacts.html.erb
@@ -32,9 +32,10 @@
 
         <div class="wiki changeset-comments"><%= format_changeset_comments changeset %></div>
         <div class="wiki changeset-comments">
+          <label for="select_tag_revision-<%= changeset.id %>" style="font-weight: bold;">Tags: </label>
           <select id="select_tag_revision-<%= changeset.id %>">
-            <% tag_info = UlakTest::Git.findTagsOfCommit(changeset.repository.url, changeset.identifier) %>
             <option value="">Seçiniz</option>
+            <% tag_info = UlakTest::Git.findTagsOfCommit(changeset.repository.url, changeset.identifier) %>
             <%= options_for_select(tag_info.map { |tag| ["#{tag[:date]}", tag[:tag]] }) %>
           </select>
           <div class="div_artifact"></div>
@@ -75,18 +76,19 @@
       const selected_tag = e.params.data.id
       const url = `/ulak_test/tab/code_artifacts/issues/<%=issue_id%>/changesets/${changeset_id}/tags?tag=${selected_tag}`
       $.get( url, function( data ) {
-        console.log( "Load was performed. data: ", data );
         console.log('>>> div_artifact.html boşaltılacak')
         $(".div_artifact").each(function(idx, div){
           console.log('>>> div_artifact.html boşaltılıyor')
           $(div).html('')
         })
+
         $(`[id^="select_tag_revision-"]:not(#${select_id})`).each(function(idx, select){ 
           console.log(select)
-          $(select).select2('val', " ")
+          $(select).val("").trigger("change");
         })
-        
-        $select.parent().find(".div_artifact").html( data );
+
+        $div_artifact = $select.parent().find(".div_artifact")
+        $div_artifact.hide().html( data ).slideDown( "slow", function() {});
       });
     });
   });
