--- a/app/views/templates/_tab_content_issue_test_results.html.erb
+++ b/app/views/templates/_tab_content_issue_test_results.html.erb
@@ -38,7 +38,7 @@
             <% tag_info = UlakTest::Git.commit_tags(changeset.repository.url, changeset.identifier) %>
             <%= options_for_select(tag_info.map { |tag| ["#{tag[:date]}", tag[:tag]] }) %>
           </select>
-          <div class="div_artifact"></div>
+          <div class="tests"></div>
         </div>
       </div>
     </div>
@@ -76,19 +76,16 @@
       const selected_tag = e.params.data.id
       const url = `/ulak_test/issues/<%=issue_id%>/tab/test_results/changesets/${changeset_id}/tags?tag=${selected_tag}`
       $.get( url, function( data ) {
-        console.log('>>> div_artifact.html boşaltılacak')
-        $(".div_artifact").each(function(idx, div){
-          console.log('>>> div_artifact.html boşaltılıyor')
+        $("div.tests").each(function(idx, div){
           $(div).html('')
         })
 
-        $(`[id^="select_tag_revision-"]:not(#${select_id})`).each(function(idx, select){ 
-          console.log(select)
+        $(`[id^="select_tag_revision-"]:not(#${select_id})`).each(function(idx, select){
           $(select).val("").trigger("change");
         })
 
-        $div_artifact = $select.parent().find(".div_artifact")
-        $div_artifact.hide().html( data ).slideDown( "slow", function() {});
+        $div_tests = $select.parent().find("div.tests")
+        $div_tests && $div_tests.hide().html( data ).slideDown( "slow", function() {});
       });
     });
   });
