--- a/app/views/templates/_tab_test_results.html.erb
+++ b/app/views/templates/_tab_test_results.html.erb
@@ -3,16 +3,16 @@
 </script>
 
 <style>
-.ol_cases > li {
+ol.cases > li {
 
 }
 
-.ol_artifacts > li {
+ol.tests > li {
     list-style: none;
     margin: 10px 5px;
 }
 
-.ol_runs > li {
+ol.runs > li {
     margin: 20px;
     border: 1px solid;
     padding: 5px;
@@ -24,7 +24,7 @@
 unless @edited_artifacts.empty? 
 kiwi_info = UlakTest::Kiwi.get_kiwi_info
 %>
-    <ol class="ol_artifacts">
+    <ol class="tests">
     <% @edited_artifacts.each do |package| %>
         <li>
             <b><%= package %></b> <br/>
@@ -33,7 +33,7 @@ kiwi_info = UlakTest::Kiwi.get_kiwi_info
             package_executions = @kiwi_executions.select { |e| package_run_ids.include?(e["run"]) }
             unless package_executions.empty?
             %>
-            <ol class="ol_runs">
+            <ol class="runs">
                 <% #package_executions.each do |run| %>
                 <% package_run_ids.each do |run_id| %>
                 <li>
