#2 added exception handling for one request

--- a/app/views/hooks/issues/_view_issues_form_details_bottom.html.erb
+++ b/app/views/hooks/issues/_view_issues_form_details_bottom.html.erb
@@ -57,7 +57,7 @@ function initSelect2() {
     multiple: true,
     minimumInputLength: 2,
     ajax: {
-      url: '/ulak_test/tests',
+      url: '/<%= $NAME_KIWI_TESTS %>/tests',
       width: '100%',
       dataType: 'json',
       delay: 250,
