--- a/app/views/settings/_ulak_test_eklenti_settings.html.erb
+++ b/app/views/settings/_ulak_test_eklenti_settings.html.erb
@@ -57,7 +57,7 @@
       <td>
         <script>
           function syncKiwiTests() {
-            $.get("/ulak_test/tests/sync", function(data) {
+            $.get("/<%= $NAME_KIWI_TESTS %>/tests/sync", function(data) {
               console.log(data);
               mesaj = `${data.after - data.before} Kayıt eklendi`
               alert("Eşleştirme başarıyla tamamlandı.\n", mesaj);
